added get all items
